--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <modules>
     <module>sakuli-admin-web</module>
     <module>sakuli-admin-client</module>
-    <module>sakuli-admin-integratontest</module>
+    <!-- <module>sakuli-admin-integrationtest</module> -->
   </modules>
 
   <build>
@@ -109,11 +109,11 @@
             <systemProperties>
               <property>
                 <name>javax.xml.parsers.SAXParserFactory</name>
-                <value>org.apache.xerces.jaxp.SAXParserFactoryImpl</value>
+                <pattern>org.apache.xerces.jaxp.SAXParserFactoryImpl</pattern>
               </property>
               <property>
                 <name>user.language</name>
-                <value>en</value>
+                <pattern>en</pattern>
               </property>
             </systemProperties>
             <forkMode>once</forkMode>
@@ -211,6 +211,11 @@
         <groupId>org.jboss.shrinkwrap.resolver</groupId>
         <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
         <version>2.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.docker-java</groupId>
+        <artifactId>docker-java</artifactId>
+        <version>3.0.10</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
