--- a/sakuli-admin-client/pom.xml
+++ b/sakuli-admin-client/pom.xml
@@ -6,10 +6,12 @@
     <artifactId>sakuli-admin</artifactId>
     <groupId>org.sweetest.platform</groupId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>sakuli-admin-client</artifactId>
+  <name>sakuli-admin-client</name>
 
   <build>
     <plugins>
@@ -61,8 +63,9 @@
             <fileset>
               <directory>src/main/resources</directory>
               <includes>
-                <include>static/dist/**</include>
-                <include>static/node_modules/**</include>
+                <include>dist/**</include>
+                <include>static/**</include>
+                <include>node_modules/**</include>
               </includes>
             </fileset>
           </filesets>
@@ -73,7 +76,7 @@
       <resource>
         <directory>src/main/resources</directory>
         <includes>
-          <include>static/dist/**</include>
+          <include>static/**</include>
         </includes>
       </resource>
     </resources>
