--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <properties>
+    <project.version></project.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.boot.version>1.5.0.RELEASE</spring.boot.version>
     <slf4j.version>1.7.22</slf4j.version>
@@ -14,10 +15,8 @@
     <logback.classic.version>1.1.9</logback.classic.version>
     <testng.version>6.10</testng.version>
     <javadoc.options>-Xdoclint:none</javadoc.options>
-
     <node.version>v8.1.3</node.version>
     <npm.version>5.0.3</npm.version>
-
   </properties>
   <groupId>org.sweetest.platform</groupId>
   <artifactId>sakuli-admin</artifactId>
@@ -60,7 +59,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.springframework.boot</groupId>
@@ -70,7 +69,7 @@
         <plugin>
           <groupId>com.github.eirslett</groupId>
           <artifactId>frontend-maven-plugin</artifactId>
-          <version>1.3</version>
+          <version>1.4</version>
         </plugin>
 
         <plugin>
