--- a/sakuli-admin-web/src/main/resources/application.properties
+++ b/sakuli-admin-web/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.resources.chain.enabled=true
-spring.resources.static-locations=classpath:/resources/static,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/ # Locations of static resources.
+spring.resources.static-locations=classpath:/META-INF/static,classpath:/resources/static/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/ # Locations of static resources.
 
-logging.level.com.consol.citrus=DEBUG
-logging.level.com.consol.citrus.admin.marshal=INFO
 logging.level.org.apache=INFO
 logging.level.org.eclipse=INFO
 logging.level.jndi=INFO
