--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <javadoc.options>-Xdoclint:none</javadoc.options>
     <node.version>v8.1.3</node.version>
     <npm.version>5.0.3</npm.version>
+    <thymeleaf.version>3.0.3.RELEASE</thymeleaf.version>
+    <thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
   </properties>
   <groupId>org.sweetest.platform</groupId>
   <artifactId>sakuli-admin</artifactId>
@@ -224,28 +226,6 @@
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
       </dependency>
-      <!--
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-core</artifactId>
-        <version>2.7.4</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>2.7.4</version>
-        <exclusions>
-          <exclusion>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      -->
     </dependencies>
   </dependencyManagement>
 
