--- a/sakuli-admin-client/src/main/resources/package.json
+++ b/sakuli-admin-client/src/main/resources/package.json
@@ -37,6 +37,7 @@
     "rxjs": "^5.1.0",
     "sockjs-client": "^1.1.4",
     "stompjs": "^2.3.3",
+    "strip-ansi": "^4.0.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@types/sockjs": "^0.3.31",
     "@types/sockjs-client": "^1.0.31",
     "@types/stompjs": "^2.3.0",
+    "@types/strip-ansi": "^3.0.0",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
