--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <javadoc.options>-Xdoclint:none</javadoc.options>
     <node.version>v8.1.3</node.version>
     <npm.version>5.0.3</npm.version>
-    <!-- This  is somehow neccessary to run spring-boot-tests -->
+    <!-- This  is somehow necessary to run spring-boot-tests -->
     <thymeleaf.version>3.0.3.RELEASE</thymeleaf.version>
     <thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
   </properties>
