--- a/sakuli-admin-client/src/main/resources/package.json
+++ b/sakuli-admin-client/src/main/resources/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "immutability-helper": "^2.3.1",
+    "moment": "^2.18.1",
     "nothrow": "^1.0.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.1.0",
