Fixed development mode with ng serve

--- a/sakuli-admin-client/pom.xml
+++ b/sakuli-admin-client/pom.xml
@@ -106,7 +106,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>run serve</arguments>
+              <arguments>run start</arguments>
             </configuration>
           </plugin>
         </plugins>
