--- a/sakuli-admin-client/src/main/resources/package.json
+++ b/sakuli-admin-client/src/main/resources/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "temp",
+  "name": "sakuli-admin",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --watch -proxy=proxy.conf.json",
     "build": "ng build -aot",
-    "test": "ng test",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watch",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "reset": "rm -rf node_moduls/ && rm -f package-lock.json && npm install"
   },
   "private": true,
   "dependencies": {
@@ -45,7 +47,7 @@
     "@angular/cli": "1.3.2",
     "@angular/compiler-cli": "4.2.4",
     "@angular/language-service": "4.2.4",
-    "@types/jasmine": "2.5.45",
+    "@types/jest": "^21.1.2",
     "@types/node": "~6.0.60",
     "@types/sockjs": "^0.3.31",
     "@types/sockjs-client": "^1.0.31",
@@ -54,6 +56,8 @@
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "jest": "^21.2.1",
+    "jest-preset-angular": "^4.0.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
@@ -64,5 +68,9 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "2.5.2"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "<rootDir>/src/jest.ts"
   }
 }
