--- a/sakuli-admin-client/src/main/resources/package.json
+++ b/sakuli-admin-client/src/main/resources/package.json
@@ -65,6 +65,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "rxjs-marbles": "^2.1.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "2.5.2"
