--- a/sakuli-admin-client/src/main/resources/package.json
+++ b/sakuli-admin-client/src/main/resources/package.json
@@ -29,8 +29,9 @@
     "@ngrx/router-store": "^4.0.0",
     "@ngrx/store": "^4.0.0",
     "@ngrx/store-devtools": "^4.0.0",
-    "@types/immutability-helper": "^2.0.15",
-    "bootstrap": "^4.0.0-alpha.6",
+    "@types/immutability-helper": "2.0.15",
+    "ace-builds": "1.2.9",
+    "bootstrap": "4.0.0-beta.2",
     "brace": "^0.10.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -38,11 +39,11 @@
     "moment": "^2.18.1",
     "nothrow": "^1.0.1",
     "rambda": "^1.0.0",
-    "reflect-metadata": "^0.1.10",
+    "reflect-metadata": "0.1.10",
     "rxjs": "^5.1.0",
-    "sockjs-client": "^1.1.4",
-    "stompjs": "^2.3.3",
-    "strip-ansi": "^4.0.0",
+    "sockjs-client": "1.1.4",
+    "stompjs": "2.3.3",
+    "strip-ansi": "4.0.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -52,25 +53,25 @@
     "@types/jest": "^21.1.2",
     "@types/node": "~6.0.60",
     "@types/ramda": "github:types/npm-ramda#dist",
-    "@types/sockjs": "^0.3.31",
-    "@types/sockjs-client": "^1.0.31",
+    "@types/sockjs": "0.3.31",
+    "@types/sockjs-client": "1.0.31",
     "@types/stompjs": "^2.3.0",
-    "@types/strip-ansi": "^3.0.0",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "jest": "^21.2.1",
-    "jest-preset-angular": "^4.0.1",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "rxjs-marbles": "^2.1.0",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
+    "@types/strip-ansi": "3.0.0",
+    "codelyzer": "3.0.1",
+    "jasmine-core": "2.6.2",
+    "jasmine-spec-reporter": "4.1.0",
+    "jest": "21.2.1",
+    "jest-preset-angular": "4.0.1",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.2.1",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "protractor": "5.1.2",
+    "rxjs-marbles": "2.1.0",
+    "ts-node": "3.0.4",
+    "tslint": "5.3.2",
     "typescript": "2.5.2"
   },
   "jest": {
