integrated jwt auth with configurable default user

--- a/sakuli-admin-web/src/main/resources/application.properties
+++ b/sakuli-admin-web/src/main/resources/application.properties
@@ -6,3 +6,19 @@ logging.level.org.eclipse=INFO
 logging.level.jndi=INFO
 logging.level.org.thymeleaf=WARN
 logging.level.org.springframework=INFO
+
+security.oauth2.resource.filter-order=3
+
+security.signing-key=MaYzkSjmkzPC57L
+security.encoding-strength=256
+security.security-realm=Spring Boot JWT Example Realm
+
+security.jwt.client-id=sakuliui
+security.jwt.client-secret=XY7kmzoNzl100
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=sakuliuiresourceid
+
+security.default-username=admin
+security.default-password=sakuli123
