--- a/sakuli-admin-web/pom.xml
+++ b/sakuli-admin-web/pom.xml
@@ -129,12 +129,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-tomcat</artifactId>
-      <exclusions>
+      <!--<exclusions>
         <exclusion>
           <groupId>org.apache.tomcat.embed</groupId>
           <artifactId>tomcat-embed-websocket</artifactId>
         </exclusion>
-      </exclusions>
+      </exclusions>-->
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
