--- a/sakuli-admin-client/src/main/resources/package.json
+++ b/sakuli-admin-client/src/main/resources/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.2.4",
-    "@angular/common": "4.2.4",
-    "@angular/compiler": "4.2.4",
-    "@angular/core": "4.2.4",
-    "@angular/forms": "4.2.4",
-    "@angular/http": "4.2.4",
-    "@angular/platform-browser": "4.2.4",
-    "@angular/platform-browser-dynamic": "4.2.4",
-    "@angular/router": "4.2.4",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.27",
+    "@angular/animations": "5.1.0",
+    "@angular/common": "5.1.0",
+    "@angular/compiler": "5.1.0",
+    "@angular/core": "5.1.0",
+    "@angular/forms": "5.1.0",
+    "@angular/http": "5.1.0",
+    "@angular/platform-browser": "5.1.0",
+    "@angular/platform-browser-dynamic": "5.1.0",
+    "@angular/router": "5.1.0",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.7",
     "@ngrx/effects": "^4.0.1",
     "@ngrx/entity": "^4.1.0",
     "@ngrx/router-store": "^4.0.0",
@@ -36,23 +36,21 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "immutability-helper": "^2.3.1",
-    "moment": "^2.18.1",
-    "nothrow": "^1.0.1",
-    "rambda": "^1.0.0",
+    "moment": "2.18.1",
+    "nothrow": "1.0.1",
     "reflect-metadata": "0.1.10",
-    "rxjs": "^5.1.0",
+    "rxjs": "5.5.5",
     "sockjs-client": "1.1.4",
     "stompjs": "2.3.3",
     "strip-ansi": "4.0.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.2",
-    "@angular/compiler-cli": "4.2.4",
-    "@angular/language-service": "4.2.4",
-    "@types/jest": "^21.1.2",
-    "@types/node": "~6.0.60",
-    "@types/ramda": "github:types/npm-ramda#dist",
+    "@angular/cli": "1.6.0",
+    "@angular/compiler-cli": "5.1.0",
+    "@angular/language-service": "5.1.0",
+    "@types/jest": "21.1.2",
+    "@types/node": "6.0.60",
     "@types/sockjs": "0.3.31",
     "@types/sockjs-client": "1.0.31",
     "@types/stompjs": "^2.3.0",
