fixed auth flow and server configs

--- a/sakuli-admin-web/src/main/resources/application.properties
+++ b/sakuli-admin-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.resources.chain.enabled=true
-spring.resources.static-locations=classpath:/webapp/,classpath:/META-INF/static,classpath:/resources/static/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/ # Locations of static resources.
+spring.resources.static-locations=classpath:/webapp/,classpath:/META-INF/static,classpath:/resources/static/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 
 logging.level.org.apache=INFO
 logging.level.org.eclipse=INFO
