added configurable userid to docker execution

--- a/sakuli-admin-web/src/main/resources/application.properties
+++ b/sakuli-admin-web/src/main/resources/application.properties
@@ -22,3 +22,5 @@ security.jwt.resource-ids=sakuliuiresourceid
 
 security.default-username=admin
 security.default-password=sakuli123
+
+docker.userid=1000
