--- a/sakuli-admin-web/pom.xml
+++ b/sakuli-admin-web/pom.xml
@@ -23,6 +23,49 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <images>
+            <image>
+              <name>hello/sub/project/java:${project.version}</name>
+              <alias>${project.name}-${project.version}</alias>
+              <build>
+                <from>openjdk:latest</from>
+                <assembly>
+                  <descriptorRef>artifact-with-dependencies</descriptorRef>
+                </assembly>
+                <cmd><![CDATA[ls /maven && java -jar /maven/${project.name}-${project.version}-executable.war]]></cmd>
+              </build>
+              <run>
+                <wait>
+                  <log>Tomcat started on port(s):</log>
+                  <time>10000</time>
+                </wait>
+              </run>
+            </image>
+          </images>
+        </configuration>
+        <executions>
+          <execution>
+            <id>start</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>build</goal>
+              <goal>start</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>stop</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>stop</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
@@ -176,7 +219,6 @@
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
     </dependency>
-
     <!-- Test scoped dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -188,6 +230,5 @@
       <artifactId>commons-io</artifactId>
       <version>2.5</version>
     </dependency>
-
   </dependencies>
 </project>
