--- a/sakuli-admin-integrationtest/pom.xml
+++ b/sakuli-admin-integrationtest/pom.xml
@@ -54,6 +54,27 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>0.23.0</version>
+        <configuration>
+          <images>
+            <image>
+              <name>java:8</name>
+              <run>
+                <cmd>java -jar /mvn/sakuli-admin-web-1.0-SNAPSHOT-executable.war</cmd>
+                <volumes>
+                  <bind>${project.build.directory}/../../sakuli-admin-web/target:/mvn</bind>
+                </volumes>
+                <log>
+                  <file>${project.build.directory}/docker.log</file>
+                </log>
+              </run>
+            </image>
+          </images>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.20</version>
