--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <properties>
-    <project.version></project.version>
+    <project.version>1.0-SNAPSHOT</project.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.boot.version>1.5.0.RELEASE</spring.boot.version>
     <slf4j.version>1.7.22</slf4j.version>
@@ -32,7 +32,7 @@
   <modules>
     <module>sakuli-admin-web</module>
     <module>sakuli-admin-client</module>
-    <!-- <module>sakuli-admin-integrationtest</module> -->
+     <module>sakuli-admin-integrationtest</module>
   </modules>
 
   <build>
