--- a/sakuli-admin-client/src/main/resources/package.json
+++ b/sakuli-admin-client/src/main/resources/package.json
@@ -29,31 +29,30 @@
     "@ngrx/router-store": "^4.0.0",
     "@ngrx/store": "^4.0.0",
     "@ngrx/store-devtools": "^4.0.0",
-    "@types/immutability-helper": "^2.0.15",
+    "@stomp/ng2-stompjs": "^0.6.2",
     "ace-builds": "1.2.9",
     "bootstrap": "4.0.0-beta.2",
     "brace": "^0.10.0",
     "core-js": "^2.4.1",
+    "cuint": "^0.2.2",
     "font-awesome": "^4.7.0",
     "immutability-helper": "^2.3.1",
     "moment": "2.18.1",
     "nothrow": "1.0.1",
+    "path": "^0.12.7",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.5.5",
-    "sockjs-client": "1.1.4",
-    "stompjs": "2.3.3",
+    "sockjs-client": "^1.1.4",
     "strip-ansi": "4.0.0",
     "zone.js": "0.8.4"
   },
   "devDependencies": {
+    "@types/immutability-helper": "^2.0.15",
     "@angular/cli": "1.6.0",
     "@angular/compiler-cli": "5.1.0",
     "@angular/language-service": "5.1.0",
     "@types/jest": "21.1.2",
     "@types/node": "6.0.60",
-    "@types/sockjs": "0.3.31",
-    "@types/sockjs-client": "1.0.31",
-    "@types/stompjs": "^2.3.0",
     "@types/strip-ansi": "3.0.0",
     "codelyzer": "3.0.1",
     "jasmine-core": "2.6.2",
