--- a/sakuli-admin-client/src/main/resources/package.json
+++ b/sakuli-admin-client/src/main/resources/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --watch -proxy=proxy.conf.json",
-    "build": "ng build -aot",
+    "build": "ng build -aot -e=prod",
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "lint": "ng lint",
@@ -35,23 +35,24 @@
     "brace": "^0.10.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
-    "immutability-helper": "^2.3.1",
+    "immutability-helper": "^2.6.4",
     "moment": "2.18.1",
     "nothrow": "1.0.1",
     "path": "^0.12.7",
     "reflect-metadata": "0.1.10",
-    "rxjs": "5.5.5",
+    "rxjs": "^5.5.2",
     "sockjs-client": "^1.1.4",
     "strip-ansi": "4.0.0",
     "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@types/immutability-helper": "^2.0.15",
     "@angular/cli": "1.6.0",
     "@angular/compiler-cli": "5.1.0",
     "@angular/language-service": "5.1.0",
+    "@types/immutability-helper": "^2.6.3",
+    "@types/jasmine": "^2.8.5",
     "@types/jest": "21.1.2",
-    "@types/node": "6.0.60",
+    "@types/node": "^6.0.96",
     "@types/strip-ansi": "3.0.0",
     "codelyzer": "3.0.1",
     "cuint": "^0.2.2",
