--- a/sakuli-admin-web/src/main/resources/application.properties
+++ b/sakuli-admin-web/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+app.version=@project.version@
+
 spring.resources.chain.enabled=true
 spring.resources.static-locations=classpath:/webapp/,classpath:/META-INF/static,classpath:/resources/static/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 
@@ -7,7 +9,15 @@ logging.level.jndi=INFO
 logging.level.org.thymeleaf=WARN
 logging.level.org.springframework=INFO
 
+app.authentication.enabled=true
+app.execution.dockercompose.enabled=true
+app.execution.dockercontainer.enabled=true
+app.execution.local.enabled=true
+app.execution.dockerfile.enabled=true
+
 security.oauth2.resource.filter-order=3
+
+org.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true
 
 security.signing-key=MaYzkSjmkzPC57L
 security.encoding-strength=256
