--- a/sakuli-admin-client/pom.xml
+++ b/sakuli-admin-client/pom.xml
@@ -38,16 +38,6 @@
             </configuration>
           </execution>
           <execution>
-            <id>ng-build</id>
-            <goals>
-              <goal>npm</goal>
-            </goals>
-            <phase>generate-resources</phase>
-            <configuration>
-              <arguments>run build</arguments>
-            </configuration>
-          </execution>
-          <execution>
             <id>npm-test</id>
             <goals>
               <goal>npm</goal>
@@ -91,7 +81,7 @@
       <id>npm-install</id>
       <activation>
         <file>
-          <missing>src/resources/node_modules</missing>
+          <missing>${basedir}/src/main/resources/node_modules</missing>
         </file>
       </activation>
       <build>
@@ -102,9 +92,47 @@
             <goals>
               <goal>npm</goal>
             </goals>
-            <configuration>
-              <arguments>run serve</arguments>
-            </configuration>
+            <executions>
+              <execution>
+                <id>install</id>
+                <goals>
+                  <goal>npm</goal>
+                </goals>
+                <phase>generate-resources</phase>
+                <configuration>
+                  <arguments>install</arguments>
+                </configuration>
+              </execution>
+              <execution>
+                <id>ng-build</id>
+                <goals>
+                  <goal>npm</goal>
+                </goals>
+                <phase>generate-resources</phase>
+                <configuration>
+                  <arguments>run build</arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>npm-without-install</id>
+      <activation>
+        <file>
+          <exists>${basedir}/src/main/resources/node_modules</exists>
+        </file>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <goals>
+              <goal>npm</goal>
+            </goals>
             <executions>
               <execution>
                 <id>ng-build</id>
