--- a/sakuli-ui-web/pom.xml
+++ b/sakuli-ui-web/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>sakuli-admin</artifactId>
     <groupId>org.sweetest.platform</groupId>
-    <version>0.9</version>
+    <version>1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -15,7 +15,7 @@
 
   <properties>
     <server.port>9090</server.port>
-    <project.home />
+    <project.home></project.home>
   </properties>
 
   <build>
