--- a/sakuli-ui-web/pom.xml
+++ b/sakuli-ui-web/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>sakuli-admin</artifactId>
     <groupId>org.sweetest.platform</groupId>
-    <version>0.9-SNAPSHOT</version>
+    <version>0.9</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
