--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   </properties>
 
   <groupId>org.sweetest.platform</groupId>
-  <artifactId>sakuli-admin</artifactId>
+  <artifactId>sakuli-ui</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>sakuli-admin</name>
