--- a/sakuli-ui-integrationtest/pom.xml
+++ b/sakuli-ui-integrationtest/pom.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>sakuli-admin</artifactId>
+    <artifactId>sakuli-ui</artifactId>
     <groupId>org.sweetest.platform</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-
   <artifactId>sakuli-ui-integrationtest</artifactId>
   <name>sakuli-ui-integrationtest</name>
-
-
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.json/json -->
     <dependency>
