mvn-jgitflow:updating poms for branch'release/0.9' with non-snapshot versions

--- a/sakuli-ui-integrationtest/pom.xml
+++ b/sakuli-ui-integrationtest/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>sakuli-ui</artifactId>
     <groupId>org.sweetest.platform</groupId>
-    <version>0.9-SNAPSHOT</version>
+    <version>0.9</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>sakuli-ui-integrationtest</artifactId>
