adapt pom files

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <groupId>org.sweetest.platform</groupId>
   <artifactId>sakuli-ui</artifactId>
   <packaging>pom</packaging>
-  <version>0.9</version>
+  <version>0.10-SNAPSHOT</version>
   <name>sakuli-admin</name>
 
   <modules>
