--- a/sakuli-ui-integrationtest/pom.xml
+++ b/sakuli-ui-integrationtest/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>sakuli-ui</artifactId>
-    <groupId>org.sweetest.platform</groupId>
+    <groupId>org.sweetest.sakuli</groupId>
     <version>0.10-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -17,6 +17,7 @@
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20170516</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -40,6 +41,7 @@
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
