--- a/sakuli-ui-web/src/main/resources/application.properties
+++ b/sakuli-ui-web/src/main/resources/application.properties
@@ -31,6 +31,6 @@ security.jwt.scope-write=write
 security.jwt.resource-ids=sakuliuiresourceid
 
 security.default-username=admin
-security.default-password=sakuli123
+security.default-password=sakuli
 
 docker.userid=1000
