--- a/sakuli-ui-client/pom.xml
+++ b/sakuli-ui-client/pom.xml
@@ -21,7 +21,7 @@
         <configuration>
           <workingDirectory>src/main/resources</workingDirectory>
           <installDirectory>target</installDirectory>
-          <!--<failOnError>true</failOnError>-->
+          <failOnError>true</failOnError>
         </configuration>
         <executions>
           <execution>
