#close 63 #close 62 #close 64

--- a/sakuli-ui-client/src/main/resources/package.json
+++ b/sakuli-ui-client/src/main/resources/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "5.1.0",
+    "@angular/cdk": "^5.2.3",
     "@angular/common": "5.1.0",
     "@angular/compiler": "5.1.0",
     "@angular/core": "5.1.0",
