--- a/sakuli-ui-web/pom.xml
+++ b/sakuli-ui-web/pom.xml
@@ -52,6 +52,11 @@
   </build>
   <dependencies>
     <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.11.2</version>
+    </dependency>
+    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>sakuli-ui-client</artifactId>
       <version>${project.version}</version>
