--- a/sakuli-ui-web/src/test/resources/org/sweetest/platform/server/web/fs/_init/project/testsuite.properties
+++ b/sakuli-ui-web/src/test/resources/org/sweetest/platform/server/web/fs/_init/project/testsuite.properties
@@ -35,7 +35,7 @@ testsuite.id=example_xfce_DEMO
 #######################################################################################
 
 # Descriptive name for the current test suite
-# DEFAULT: value of 'testsuite.id'
+# DEFAULT: value of 'testsuite.event'
 testsuite.name=example test suite inside of the Xfce desktop for Sakuli
 
 # The warning runtime threshold (seconds) estimates the execution time of the complete
